# MemoryManager

./: .gitignore  CMakeLists.txt  Debug Notes  Notes.txt  README.md  Runtime_Statistics.txt  ager.h  command_line.txt  initializer.c  initializer.h  page_fault_handler.c  page_fault_handler.h  pfn.h  pte.h  scheduler.c  simulator.c  simulator.h  trimmer.c  vm.c  vm.h  writer.c  writer.h
data_structures/: disk.c  disk.h  locks.c  locks.h  page_list.c  page_list.h  pfn.c  pte.c  pte.h
include/: config.h  debug.h  disk.h  initializer.h  locks.h  macros.h  page_fault_handler.h  page_list.h  pfn.h  pte.h  releaser.h  scheduler.h  simulator.h  threads.h  trimmer.h  utils.h  writer.h
src/: ager.c  debug.c  disk.c  initializer.c  locks.c  page_fault_handler.c  page_list.c  pfn.c  pte.c  releaser.c  scheduler.c  simulator.c  threads.c  trimmer.c  utils.c  writer.c
threads/: ager.c  initializer.c  initializer.h  page_fault_handler.c  page_fault_handler.h  pruner.c  pruner.h  releaser.c  releaser.h  scheduler.c  scheduler.h  simulator.c  simulator.h  threads.c  threads.h  trimmer.c  trimmer.h  writer.c  writer.h
utils/: config.h  debug.c  debug.h  utils.c
